--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
   <div class="top-container">
     <img class="cloud" src="cloud.png" alt="cloud-img">
     <h1>I'm Chinmay Mishra.</h1>
-    <p>a Web Developer.</p>
-    <img class="bottom-cloud" src="cloud.png" alt="cloud-img">
-    <img src="https://media2.giphy.com/media/XNzFF7cBzZbRYdFJ5t/giphy.webp?cid=ecf05e47ghi9wda8omrugfbc7bwee38vaswd9a5i7ps49gko&rid=giphy.webp&ct=s" alt="mountain-img">
+    <h2>a Web Developer.</h2>
+    <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img">
+    <img class="top-gif" src="https://media2.giphy.com/media/YRi7WgzG924IzEMqTB/200w.webp?cid=ecf05e47qx5savmwe7dtkz2o4lqis8pxteuabv9qrqjs7vkn&rid=200w.webp&ct=s" alt="mountain-img">
   </div>
 
     <div class="middle-container">
@@ -33,7 +33,7 @@
           <p>write code for computer programs and mobile applications. They also are involved in maintaining, debugging and troubleshooting systems and software to ensure that everything is running smoothly..</p>
         </div>
         <div class="skill-row">
-          <img class="" src="" alt="">
+          <img class="Skills-2" src="https://media0.giphy.com/media/d9IfL7seBexHLct75B/200w.webp?cid=ecf05e476rxf56jyvvn0bfzse4ike76grfflv55z95ry074q&rid=200w.webp&ct=s" alt="">
           <h3>Web Developer</h3>
           <p>typically construct the layout of a website, creating a visually interesting home page and user-friendly design, and may sometimes write content for the website. After a website is up and running, developers make sure that the site is functional on all web browsers, testing and updating as needed.</p>
         </div>
@@ -48,9 +48,9 @@
 
 
     <div class="bottom-container">
-      <a class="footer-link" href="https://www.instagram.com/chinmay_mishra_21/">instagram</a>
-      <a class="footer-link" href="https://twitter.com/chinmaymishra23">Twitter</a>
-      <p>© 2021 Chinmay Mishra.</p>
+      <a class="footer-link-1" href="https://www.instagram.com/chinmay_mishra_21/">instagram</a>
+      <a class="footer-link-2" href="https://twitter.com/chinmaymishra23">Twitter</a>
+      <p class="bottom-para">© 2021 Chinmay Mishra.</p>
     </div>
 
 
