--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <img class="cloud" src="cloud.png" alt="cloud-img">
     <h1>I'm Chinmay Mishra.</h1>
     <h2>a Web Developer.</h2>
-    <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img">
+    <img class="bottom-cloud" src="cloud.png" alt="cloud-img">
     <img class="top-gif" src="https://media2.giphy.com/media/YRi7WgzG924IzEMqTB/200w.webp?cid=ecf05e47qx5savmwe7dtkz2o4lqis8pxteuabv9qrqjs7vkn&rid=200w.webp&ct=s" alt="mountain-img">
   </div>
 
